[gd_scene load_steps=18 format=2]

[ext_resource path="res://level/graphpaper_transparent.png" type="Texture" id=1]
[ext_resource path="res://font/alphbeta.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://font/alagard.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://font/Lato-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://main/MainMenu.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 80
outline_size = 6
outline_color = Color( 0.247059, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 48
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_top = 8.0
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.792157, 1, 1, 1 )

[sub_resource type="DynamicFont" id=4]
size = 64
outline_size = 3
outline_color = Color( 0, 0.207843, 0.454902, 1 )
extra_spacing_char = 2
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color( 0, 0.419608, 0.419608, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5

[sub_resource type="StyleBoxFlat" id=6]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color( 0, 1, 1, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxFlat" id=8]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color( 0.301961, 0.337255, 0.337255, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5

[sub_resource type="StyleBoxFlat" id=9]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color( 0, 0.2, 0.2, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5

[sub_resource type="DynamicFont" id=10]
size = 32
extra_spacing_char = 1
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=11]
size = 24
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 1
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=12]
size = 36
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.444
anchor_right = 0.5
anchor_bottom = 0.444
margin_left = -600.0
margin_top = -659.76
margin_right = 600.0
margin_bottom = 540.24
texture = ExtResource( 1 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Menu"]
anchor_left = -0.001
anchor_top = 0.191
anchor_right = 1.0
anchor_bottom = 0.191
margin_left = 0.0160913
margin_top = -78.344
margin_right = -0.943909
margin_bottom = 12.656
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center][color=red]7[/color]'s Gone Mad[/center]"
text = "7's Gone Mad"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu"]
anchor_top = 0.355
anchor_right = 1.0
anchor_bottom = 0.355
margin_left = 1.0
margin_top = -82.7
margin_bottom = -16.7
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.905882, 0.772549, 0.619608, 1 )
text = "An Absurd Math Adventure"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -137.0
margin_top = -74.5
margin_right = 137.0
margin_bottom = 248.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Number" type="LineEdit" parent="Menu/VBoxContainer"]
margin_right = 274.0
margin_bottom = 73.0
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "800"
align = 1
max_length = 3
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
caret_blink = true
caret_blink_speed = 0.25

[node name="PlayButton" type="Button" parent="Menu/VBoxContainer"]
margin_top = 77.0
margin_right = 274.0
margin_bottom = 132.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
custom_fonts/font = SubResource( 10 )
text = "Play"

[node name="Control" type="Control" parent="Menu/VBoxContainer"]
margin_top = 136.0
margin_right = 274.0
margin_bottom = 146.0
rect_min_size = Vector2( 0, 10 )

[node name="SettingsButton" type="Button" parent="Menu/VBoxContainer"]
margin_top = 150.0
margin_right = 274.0
margin_bottom = 205.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
custom_fonts/font = SubResource( 10 )
text = "Settings"

[node name="CreditsButton" type="Button" parent="Menu/VBoxContainer"]
margin_top = 209.0
margin_right = 274.0
margin_bottom = 264.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
custom_fonts/font = SubResource( 10 )
text = "Credits"

[node name="QuitButton" type="Button" parent="Menu/VBoxContainer"]
margin_top = 268.0
margin_right = 274.0
margin_bottom = 323.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
custom_fonts/font = SubResource( 10 )
text = "Quit"

[node name="Intro" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 25
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="Intro"]
margin_left = 10.0
margin_top = 25.0
margin_right = 950.0
margin_bottom = 530.0
custom_constants/separation = 20

[node name="StoryText" type="VBoxContainer" parent="Intro/VBoxContainer2"]
margin_right = 940.0
margin_bottom = 292.0
custom_constants/separation = 20

[node name="RichTextLabel" type="RichTextLabel" parent="Intro/VBoxContainer2/StoryText"]
margin_right = 940.0
margin_bottom = 24.0
custom_fonts/normal_font = SubResource( 11 )
custom_colors/default_color = Color( 1, 0.913725, 0.705882, 1 )
bbcode_enabled = true
bbcode_text = "Agent [color=aqua]NUMBER[/color]? Come in, Agent [color=aqua]NUMBER[/color]. Do you read me?"
text = "Agent NUMBER? Come in, Agent NUMBER. Do you read me?"
fit_content_height = true

[node name="RichTextLabel2" type="RichTextLabel" parent="Intro/VBoxContainer2/StoryText"]
margin_top = 44.0
margin_right = 940.0
margin_bottom = 68.0
custom_fonts/normal_font = SubResource( 11 )
custom_colors/default_color = Color( 1, 0.913725, 0.705882, 1 )
bbcode_enabled = true
bbcode_text = "We have received reports that sometime yesterday evening, [color=red]7[/color] 8 [color=yellow]9[/color]."
text = "We have received reports that sometime yesterday evening, 7 8 9."
fit_content_height = true

[node name="RichTextLabel3" type="RichTextLabel" parent="Intro/VBoxContainer2/StoryText"]
margin_top = 88.0
margin_right = 940.0
margin_bottom = 112.0
custom_fonts/normal_font = SubResource( 11 )
custom_colors/default_color = Color( 1, 0.913725, 0.705882, 1 )
bbcode_enabled = true
bbcode_text = "Yes, you heard that correctly. [color=yellow]9[/color] is no more, he has been 8en by [color=red]7[/color]."
text = "Yes, you heard that correctly. 9 is no more, he has been 8en by 7."
fit_content_height = true

[node name="RichTextLabel4" type="RichTextLabel" parent="Intro/VBoxContainer2/StoryText"]
margin_top = 132.0
margin_right = 940.0
margin_bottom = 180.0
custom_fonts/normal_font = SubResource( 11 )
custom_colors/default_color = Color( 1, 0.913725, 0.705882, 1 )
bbcode_enabled = true
bbcode_text = "All evidence indicates that [color=red]7[/color] is now evil. Furthermore, reports are coming in from all across the coordinate plane that [color=red]7[/color]'s corruption is spreading."
text = "All evidence indicates that 7 is now evil. Furthermore, reports are coming in from all across the coordinate plane that 7's corruption is spreading."
fit_content_height = true

[node name="RichTextLabel5" type="RichTextLabel" parent="Intro/VBoxContainer2/StoryText"]
margin_top = 200.0
margin_right = 940.0
margin_bottom = 224.0
custom_fonts/normal_font = SubResource( 11 )
custom_colors/default_color = Color( 1, 0.913725, 0.705882, 1 )
bbcode_enabled = true
bbcode_text = "All numbers with the digit [color=red]7[/color] are now under [color=red]7[/color]'s influence."
text = "All numbers with the digit 7 are now under 7's influence."
fit_content_height = true

[node name="RichTextLabel6" type="RichTextLabel" parent="Intro/VBoxContainer2/StoryText"]
margin_top = 244.0
margin_right = 940.0
margin_bottom = 292.0
custom_fonts/normal_font = SubResource( 11 )
custom_colors/default_color = Color( 1, 0.913725, 0.705882, 1 )
bbcode_enabled = true
bbcode_text = "Agent [color=aqua]NUMBER[/color], your mission, should you choose to accept it: 
Fight your way through [color=red]7[/color]'s cronies. Find [color=red]7[/color], and eliminate him."
text = "Agent NUMBER, your mission, should you choose to accept it: 
Fight your way through 7's cronies. Find 7, and eliminate him."
fit_content_height = true

[node name="ContinueLabel" type="Label" parent="Intro/VBoxContainer2"]
margin_top = 312.0
margin_right = 940.0
margin_bottom = 345.0
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0.678431, 0.976471, 1, 1 )
text = "(Press any key to continue)"
align = 1

[node name="Timer" type="Timer" parent="Intro"]
wait_time = 1.3

[node name="Tween" type="Tween" parent="."]

[connection signal="text_changed" from="Menu/VBoxContainer/Number" to="." method="_on_Number_text_changed"]
[connection signal="text_entered" from="Menu/VBoxContainer/Number" to="." method="play"]
[connection signal="pressed" from="Menu/VBoxContainer/PlayButton" to="." method="play"]
[connection signal="pressed" from="Menu/VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="timeout" from="Intro/Timer" to="." method="_on_Timer_timeout"]
